--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,87 @@ h1 {
 .page-btn.active {
     background: #e74c3c;
 }
+
+.tipo {
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: bold;
+    margin: 2px;
+}
+
+/* Colores por tipo */
+.tipo.fire {
+    background-color: #F08030;
+}
+
+.tipo.water {
+    background-color: #6890F0;
+}
+
+.tipo.grass {
+    background-color: #78C850;
+}
+
+.tipo.electric {
+    background-color: #F8D030;
+    color: #000;
+}
+
+.tipo.ice {
+    background-color: #98D8D8;
+    color: #000;
+}
+
+.tipo.fighting {
+    background-color: #C03028;
+}
+
+.tipo.poison {
+    background-color: #A040A0;
+}
+
+.tipo.ground {
+    background-color: #E0C068;
+    color: #000;
+}
+
+.tipo.flying {
+    background-color: #A890F0;
+}
+
+.tipo.psychic {
+    background-color: #F85888;
+}
+
+.tipo.bug {
+    background-color: #A8B820;
+    color: #000;
+}
+
+.tipo.rock {
+    background-color: #B8A038;
+    color: #000;
+}
+
+.tipo.ghost {
+    background-color: #705898;
+}
+
+.tipo.dark {
+    background-color: #705848;
+}
+
+.tipo.dragon {
+    background-color: #7038F8;
+}
+
+.tipo.steel {
+    background-color: #B8B8D0;
+    color: #000;
+}
+
+.tipo.fairy {
+    background-color: #EE99AC;
+}
